# portfolio

./: .dockerignore  .env.dev.example  .env.example  .env_sample  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.hostinger.yml  docker-compose.yml  docker.sh  nginx.conf.example  nuxt.config.js  package-lock.json  package.json  projects.toml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/server/: .env.sample  Makefile  app.py  decorators.py  ecosystem.config.js  logs.txt  pyproject.toml  requirements.txt
app/server/db/: mongo.py
app/server/models/: Mongo.py  Projects.py  Users.py
app/server/routes/: auth.py  client.py  projects.py
app/server/routes/auth/: authentication.py  googleOAuth.py
app/server/template/: index.html
app/server/template/assets/: AboutView-CO8ZL4rf.js  index-3lMev7iE.js  index-BE721Xaq.js  index-BHwb9KGa.css  index-BPpdlaHZ.js  index-BQ1VEIjQ.css  index-BSTifLcX.css  index-BUugtZp0.css  index-BXJGFS-2.js  index-BYgvfCeE.css  index-Bh6NpnuM.css  index-BvjjRgEr.js  index-C0TZPpz-.css  index-CQjeKuyP.js  index-CRf2_ALT.css  index-CYPfY8ZK.css  index-Cumqt98K.js  index-D4B1E6gp.css  index-D8qV9-xY.js  index-DGMo0xRd.js  index-DKVTVgvq.js  index-DNvW062A.js  index-DRqpwzcm.css  index-DUslayon.js  index-DodaLtMQ.css  index-Dp4yT8jM.js  index-DuBaR9Ed.css  index-XKu9lHtJ.js  index-YzthXMMZ.js
app/server/utils/: jwt.py  toml_tools.py
components/: navbar.vue
docs/: Requirements.md  Terms of Privacy and Acceptance - en-us.md  Terms of Privacy and Acceptance - pt-br.md
(+58 files in other folders)
